push modif lien

--- a/projets-bootstrap.html
+++ b/projets-bootstrap.html
@@ -215,7 +215,11 @@
                   <span class="badge bg-warning text-dark">JavaScript</span>
                   <span class="badge bg-success">PHP</span>
                 </div>
-                <a href="#" target="_blank" class="btn btn-projet">
+                <a
+                  href="https://github.com/juklau/MediaStock"
+                  target="_blank"
+                  class="btn btn-projet"
+                >
                   <i class="fab fa-github me-2"></i>Voir plus
                 </a>
               </div>
@@ -304,7 +308,11 @@
                   <span class="badge bg-info me-1">PHP</span>
                   <span class="badge bg-danger me-1">JAVA FX</span>
                 </div>
-                <a href="#" target="_blank" class="btn btn-projet">
+                <a
+                  href="https://github.com/kevinsenasson/OBSILOCK-javafx-main--1-/tree/main/OBSILOCK-javafx-main"
+                  target="_blank"
+                  class="btn btn-projet"
+                >
                   <i class="fab fa-github me-2"></i>Voir plus
                 </a>
               </div>
@@ -515,7 +523,11 @@
                 <div class="projet-tags mb-3">
                   <span class="badge bg-purple">Figma</span>
                 </div>
-                <a href="#" target="_blank" class="btn btn-projet">
+                <a
+                  href="https://www.figma.com/design/8YYwxKWra3P9QWC6UJBv2L/Untitled?node-id=0-1&p=f&t=Nnwc89w6QEJH0Zg5-0"
+                  target="_blank"
+                  class="btn btn-projet"
+                >
                   <i class="fab fa-figma me-2"></i>Voir plus
                 </a>
               </div>
@@ -549,7 +561,11 @@
                 <div class="projet-tags mb-3">
                   <span class="badge bg-purple">Figma</span>
                 </div>
-                <a href="#" target="_blank" class="btn btn-projet">
+                <a
+                  href="https://www.figma.com/design/Nj6w7AH1QZJlRtFcsV69ly/Sans-titre?t=Nnwc89w6QEJH0Zg5-0"
+                  target="_blank"
+                  class="btn btn-projet"
+                >
                   <i class="fab fa-figma me-2"></i>Voir plus
                 </a>
               </div>
